Xwrits NEWS

Version 2.6.4   26.Sep.1998

* Added `--help' (well, `help') to conform to GNU program behavior standards.


Version 2.6.3   7.Sep.1998

* No user-visible changes (fixed configuration bugs and renamed some
  variables).


Version 2.6.2   17.Aug.1998

* Bug fix: If `idle' was off, the warning window would never appear (it was
  waiting for a key press -- stupid, since it wasn't listening for any key
  presses).


Version 2.6.1   8.Jun.1998

* Fixed the clock, which will now disappear properly instead of leaving a
  black square (even in mono).


Version 2.6   29.May.1998

* Made and included pictures for monochromatic screens and added `mono'
  option.

* Bug fixes for `lock', `clock' and `breakclock'.

* Restored the time argument to `idle'.


Version 2.6b8   27.May.1998

* Added support for --long-options and --version.

* Fixed race condition in schedule.c.


Version 2.6b7   23.May.1998

* Clock improvements: fixed problem with black-on-black clock on 24-plane
  displays (it had to do with visual selection: WhitePixel wasn't white since
  the Visual was not the default). Also improved clock appearance and made it
  appear more like when it's supposed to.


Version 2.6b6   5.May.1998

* Improved the configure script to use <sys/types.h> for u_int32_t, etc.
  when possible.

* Fixed bug in gifx.c: on a 24-plane display, any picture came out all black.
  (The problem: implementation-specific behavior of <<; specifically,
  I expected 1<<32 == 0 for 32-bit ints.)

* Added visual searching: xwrits will now use a TrueColor visual if available.


Version 2.6b4   5.May.1998

* Updated GIF library to 0.9, the version used in Gifsicle. This has
  temporarily broken support for monochrome displays, but will hopefully
  fix other bugs some people have experienced.


Version 2.6b3   24.Nov.1997

* Fixed installation and improved the configure script.


Version 2.6b2

* Fixed bug with freeing memory multiple times. Works better on Linux now.

