@@ -6,13 +6,14 @@ AC_SUBST(VERSION)
 AC_PROG_CC
 AC_C_CONST
 
-AC_ARG_ENABLE(warn,
-[  --enable-warn           build with -Wall],
+AC_ARG_ENABLE(warnings,
+[  --enable-warnings       compile with -Wall],
 if test "$enableval" = yes ; then
   CC="$CC -Wall"
 fi)
 
 AC_PROG_INSTALL
+AC_ARG_PROGRAM
 
 AC_PATH_XTRA
 
@@ -103,4 +104,6 @@ dnl
 dnl Output
 dnl
 
+if test ! -d mono ; then mkdir mono ; fi
+if test ! -d color ; then mkdir color ; fi
 AC_OUTPUT(Makefile gif.h)
